--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.0.0",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1"
   },
   "devDependencies": {
     "eslint": "^8",
