--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.0.0",
     "next-auth": "^4.24.10",
     "password-validator": "^5.3.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1"
