--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "eslint": "^8",
