--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "sse-client": "^0.0.10",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
