--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.17",
     "mongoose": "^8.8.0",
     "next": "15.0.0",
     "next-auth": "^4.24.10",
