--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rsuite/icons": "^1.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6",
+    "rsuite": "^5.74.2",
     "sse-client": "^0.0.10",
     "uuid": "^11.0.3"
   },
